# HashClone

./: Alignment  AlignmentBlast  AlignmentIGH  CMakeLists.txt  CompCheckerKmer  CompCheckerKmerRPM  CompCheckerRead  CompCheckerReadNoGerm  CompareChecker.cpp  CompareChercker.h  CreateKmer  DoxyFile  EditDistance.cpp  FindRead  FreqChecker  HashChecker  HashCheckerDebugOutput  HashCheckerFreq  HashCheckerFreqRPM  HashCheckerPairedEnd  HashCheckerPairedEndSimilar  HashCheckerSignature  HashCheckerSimilarRead  HashClone.sh  HashCloneGUI.sh  HashCloneNorm.sh  HashCloneParall.sh  Parser  README-HashChecker  README.txt  TestFreq  UpdateFreq  UpdateFreq.cpp  classHashChaining.cpp  classHashChaining.h  classIO.cpp  classIO.h  classMybitset.cpp  conf.h  const.h  (+10 more)
